portal api