@@ -26,7 +26,6 @@ import org.springframework.security.config.annotation.web.configurers.AbstractHt
 import java.util.Arrays;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Configuration
 @EnableWebSecurity
@@ -132,7 +131,7 @@ public class SecurityConfig {
                 List<String> allowedIps = Arrays.stream(internalAllowedIps.split(","))
                                 .map(String::trim)
                                 .filter(ip -> !ip.isEmpty())
-                                .collect(Collectors.toList());
+                                .toList();
                 return (authentication, context) -> {
                         String remoteAddr = context.getRequest().getRemoteAddr();
                         boolean allowed = allowedIps.contains(remoteAddr);
@@ -211,7 +210,7 @@ public class SecurityConfig {
                 return Arrays.stream(rawOrigins.split(","))
                                 .map(String::trim)
                                 .filter(origin -> !origin.isEmpty())
-                                .collect(Collectors.toList());
+                                .toList();
         }
 
         private boolean isLocalLikeProfile(String profile) {
